--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,28 +1,40 @@
 
-<form>
+<form #f="ngForm" (ngSubmit)="save(f.value)">
   <div class="form-group">
     <label for="title">Title</label>
-    <input id="title" type="text" class="form-control">
+    <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+    <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+      Title is required.
+    </div>
   </div>
   <div class="form-group">
     <label for="price">Price</label>
     <div class="input-group-prepend">
       <span class="input-group-text">$</span>
-      <input id="price" type="number" class="form-control">
+      <input #price="ngModel" ngModel name="price" id="price" type="number" class="form-control" required>
+      <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
+        Price is required.
+      </div>
     </div>   
   </div>
   <div class="form-group">
     <label for="category">Category</label>
-    <select id="category" class="form-control">
+    <select #category="ngModel" ngModel name="category" id="category" class="form-control" required>
       <option value=""></option>
       <option *ngFor="let c of categories$ | async" [value]="c.key">
         {{ c.name }}
       </option>
     </select>
+    <div class="alert alert-danger" *ngIf="category.touched && category.invalid">
+      Category is required.
+    </div>
   </div>
   <div class="form-group">
       <label for="imageUrl">Image Url</label>
-      <input id="imageUrl" type="text" class="form-control">
+      <input #imageUrl="ngModel" ngModel name="imageUrl" id="imageUrl" type="text" class="form-control" required>
+      <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
+        ImageUrl is required.
+      </div>
     </div>
     <button class="btn btn-primary">Save</button>
 </form>
