--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -14,6 +14,7 @@
     [items]="items"
     [itemCount]="itemCount"
     (reload)="reloadItems($event)"
+    class="p-4"
 >
     <data-table-column
         [property]="'title'"
@@ -43,22 +44,3 @@
     </data-table-column>
 
 </data-table>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Price</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let p of filteredProducts">
-            <td>{{ p.title }}</td>
-            <td>{{ p.price }}</td>
-            <td>
-                <a [routerLink]="['/admin/products/', p.key]">Edit</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
