20190913. refactoring navbar ItemsCount

--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -9,8 +9,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">
           Shopping Cart
-          <span class="badge badge-warning badge-pill">
+          <span class="badge badge-warning badge-pill" *ngIf="shoppingCartItemCount">
             {{ shoppingCartItemCount }}
+            <!-- {{ cart.totalItemsCount }} -->
           </span>
         </a>
       </li>
