20190924. Shopping cart detail.

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,25 @@
-<p>
-  shopping-cart works!
-</p>
+<h1>
+  Shopping Cart
+</h1>
+<ng-container *ngIf="cart$ | async as cart">
+  <p>
+    You have {{ shoppingCartItemCount }} items in your shopping cart.
+  </p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Product</th>
+        <th>Quantity</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let product of objectKeys">
+        <ng-container *ngIf="product != 'key'">
+            <td>{{ products[product].product.title }}</td>
+            <td>{{ products[product].quantity }}</td>
+        </ng-container>        
+      </tr>
+    </tbody>
+  </table>
+</ng-container>
